# GPT_Genius

./: COMPLETION_REPORT.md  DEMO.md  LICENSE  MANIFEST.in  README.md  STRUCTURE.md  pyproject.toml  requirements.txt  setup.py  test_generation.py  test_import.py
examples/: basic_usage.py
gpt_genius/: __init__.py
gpt_genius/applications/: __init__.py
gpt_genius/applications/cli/: __init__.py  main.py
gpt_genius/core/: __init__.py  ai.py  base_agent.py  base_execution_env.py  base_memory.py  chat_to_files.py  files_dict.py  linting.py  preprompts_holder.py  prompt.py  token_usage.py
gpt_genius/core/default/: __init__.py  disk_execution_env.py  disk_memory.py  file_store.py  paths.py  simple_agent.py  steps.py
gpt_genius/preprompts/: entrypoint  file_format  file_format_diff  generate  improve  philosophy  roadmap
gpt_genius/tools/: __init__.py  supported_languages.py
tests/: __init__.py  test_core.py
